apps/vps/site/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: site
spec:
  selector:
    app: site
  ports:
    - name: http
      port: 80
      targetPort: http
